syntax = "proto3";

option java_package = "io.grpc.examples.translator";

service Translator {
    rpc addTranslation (AddTranslationRequest) returns (KnownTranslationsMessage);
    rpc getTranslations (GetTranslationRequest) returns (KnownTranslationsMessage);

}

enum Language {
    ENGLISH = 0;
    RUSSIAN = 1;
}

message AddTranslationRequest {
    string word = 1;
    Language fromLanguage = 2;
    Language toLanguage = 3;
    string translation = 4;
}

message GetTranslationRequest {
    string word = 1;
    Language fromLanguage = 2;
    Language toLanguage = 3;
}

message KnownTranslationsMessage {
    repeated WordTranslation knownTranslations = 1;
}

message WordTranslation {
    Language language = 1;
    string text = 2;
}

